--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,3 +1,20 @@
+body{
+  font-family: 'Arvo', serif;
+}
+
 h1{
   font-size: u(18px);
+}
+
+h2{
+  font-size: u(14px);
+}
+
+p{
+  font-size: u(12px);
+}
+
+
+.c-bigger-text{
+  font-size: u(20px);
 }
