--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -5,3 +5,13 @@ $IE9: lt-ie9;
 $l-breakpoint-S: 480px;
 $l-breakpoint-M: 600px;
 $l-breakpoint-L: 960px;
+
+// colors
+$dark:  #333030;
+$ocean:  #2b90d9;
+$grass: #3ac569;
+$snow: #FFFFFF;
+$salmon: #ff7473;
+$sun: #feee7d;
+$alge: #79a8a9;
+$flower: #353866;
