Chin Perera : CSS

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -36,3 +36,9 @@
 .l-intro-btn-container{
   margin-top: u(20px);
 }
+
+.l-game-buttons{
+  vertical-align: middle;
+  text-align: center;
+  padding-top: 2%;
+}
