--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -42,3 +42,13 @@
   text-align: center;
   padding-top: 2%;
 }
+
+.l-results-container{
+  text-align: center;
+  margin-top: 35%;
+  background: white;
+  padding: u(10px);  
+  p{
+    font-size: u(16px);
+  }
+}
