--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -15,3 +15,7 @@ $salmon: #ff7473;
 $sun: #feee7d;
 $alge: #79a8a9;
 $flower: #353866;
+
+// Background color
+$body: #28b4e5;
+$secondary-container: #B2E0B0;
