Chin Perera : tests added

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,3 +5,23 @@ html{
 body{
   background: $body;
 }
+
+.l-fl, %l-fl{
+  float: left;
+}
+
+.l-fr, %l-fr{
+  float: right;
+}
+
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }.clearfix { display: inline-block; }
+
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
