--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,13 +6,19 @@
   }
 }
 
+.l-top-container{
+  width: 100%;
+  display: inline-block;
+  margin-top: u(20px);
+}
+
 .l-header{
   width: 100%;
   min-height: u(50px);
   background: $grass;
   padding: u(10px);
   display: inline-block;
-  border-bottom: u(3px) solid white;
+  border-bottom: u(3px) solid $snow;
   @include box-sizing;
   @include bp(L){
       margin: 0 auto;
@@ -74,14 +80,33 @@
   padding-top: 2%;
 }
 
-.l-results-container{
+.l-full-width-container{
   text-align: center;
-  margin-top: 32%;
   bottom: 0;
   background: $secondary-container;
   padding: u(10px);
-  border: u(1px) solid white;
+  border: u(1px) solid $snow;
   p{
     font-size: u(16px);
+  }
+  &.--result{
+    margin-top: 25%;
+  }
+}
+
+.l-score-boxes{
+  width: u(120px);
+  min-height: u(40px);
+  background: $secondary-container;
+  padding: u(10px);
+  text-align: center;
+  border: u(1px) solid $snow;
+  line-height: u(20px);
+  @include box-sizing;
+  &.--left{
+    @extend %l-fl;
+  }
+  &.--right{
+    @extend %l-fr;
   }
 }
